# doctor_patient_using_boilerplate

./: .cruft.json  CMakeLists.txt  Jenkinsfile  README.md
.github/workflows/: build.yml
data/: bookings.csv  doctors.csv  patients.csv
include/: Booking.h  CSVHandler.h  Doctor.h  Patient.h  Schedule.h
src/: Booking.cpp  CSVHandler.cpp  Doctor.cpp  Patient.cpp  Schedule.cpp  main.cpp
tests/: test_sample.cpp
